--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@ html {
     background-color: #ebe7eb;
     align-items: center;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 ::selection {
     background-color: rgb(134, 99, 167);
@@ -75,6 +76,7 @@ html {
     padding: 5px 0;
     position: fixed ;
     bottom: 0;
+    margin-top: 50px;
 }
 
 @media(max-width : 768px)  {
